# spacegame

./: .gitignore  .travis.yml  CMakeLists.txt  README.org  uml.puml
src/: Attack.hpp  CameraListener.cpp  CameraListener.hpp  CameraMoveEvent.cpp  CameraMoveEvent.hpp  DeselectUnitEvent.hpp  Direction.cpp  Direction.hpp  Doxyfile  Drawable.cpp  Drawable.hpp  DrawableDecorator.hpp  Entity.cpp  Entity.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  Events.cpp  Events.hpp  Fighter.cpp  Fighter.hpp  GameState.cpp  GameState.hpp  Listener.hpp  MoveEvent.cpp  MoveEvent.hpp  MoveFinishedEvent.hpp  Movement.hpp  MovementListener.hpp  QuitEvent.hpp  QuitListener.cpp  QuitListener.hpp  Rectangle.cpp  Rectangle.hpp  SelectUnitEvent.hpp  Sprite.cpp  Sprite.hpp  StopCameraMoveEvent.hpp  StopMoveEvent.cpp  StopMoveEvent.hpp  (+29 more)
src/attacks/: Attack.hpp
src/drawables/: Drawable.cpp  Drawable.hpp  DrawableDecorator.cpp  DrawableDecorator.hpp  Movement.hpp  Rectangle.cpp  Rectangle.hpp  Renderer.cpp  Renderer.hpp  Sprite.cpp  Sprite.hpp  Texture.cpp  Texture.hpp  TileDrawable.cpp  TileDrawable.hpp
src/entities/: Component.hpp  Entity.hpp  Fighter.cpp  Fighter.hpp  Unit.cpp  Unit.hpp
src/events/: CameraMoveEvent.cpp  CameraMoveEvent.hpp  DeselectUnitEvent.hpp  Event.hpp  EventHandler.cpp  EventHandler.hpp  Events.hpp  MoveEvent.cpp  MoveEvent.hpp  MoveFinishedEvent.hpp  QuitEvent.hpp  SelectUnitEvent.hpp  StopCameraMoveEvent.hpp  StopMoveEvent.cpp  StopMoveEvent.hpp  TriggerSwitchEvent.hpp
src/listeners/: CameraListener.cpp  CameraListener.hpp  Listener.hpp  MovementListener.cpp  MovementListener.hpp  QuitListener.cpp  QuitListener.hpp  SwitchListener.cpp  SwitchListener.hpp
src/tiles/: Tile.cpp  Tile.hpp  TileMap.cpp  TileMap.hpp
src/util/: Direction.cpp  Direction.hpp  GameState.cpp  GameState.hpp  Window.cpp  Window.hpp
test/: DrawableTest.hpp  MockEvent.hpp  MockListener.hpp  MockRenderer.hpp  MockTexture.hpp  SpriteTest.cpp  TestEventHandler.cpp  TestSprite.cpp
test/drawables/: MockDrawable.hpp  MockRenderer.hpp  MockTexture.hpp  TestDrawable.hpp  TestSprite.cpp
test/events/: MockEvent.hpp  MockEventHandler.hpp  TestEventHandler.cpp
test/listeners/: TestQuitListener.cpp
test/util/: MockGameState.hpp  MockWindow.hpp  TestDirection.cpp  TestGameState.cpp  TestWindow.cpp
